# Fastapi-best-practices

./: Dockerfile  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init-venv.sh
app/: main.py
app/common/: input_validation.py
app/routers/: cafe_menu.py  weathers.py
