[project]
name = "fastapi-thirdparty-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.116.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.2",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"
format = "ruff format ."
lint = "ruff check ."
